--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <body>
         <h1>Cookie Clicker</h1>
         <div class="cookie">
-            <p id="clicks">0</p>
+            <p id="clicks" class="cookieclicks">0</p>
             <img src="images/Keksi.png"  onclick="buttonclick()">
+            <div>
+                <p id="randomnotification"></p>
+            </div>
         </div>
 
         <div class="container">
@@ -26,37 +29,37 @@
                 <tbody>
                     <tr>
                         <td>ClickPower Increase</td>
-                        <td id="upgradeclickcost">500</td>
+                        <td id="upgradeclickcost" class="upgradecost">500</td>
                         <td><button onclick="purchase(7)">Buy Upgrade</button></td>
                     </tr>
                     <tr>
                         <td>Tool Upgrade</td>
-                        <td id="toolUpgradeCost">1000</td>
+                        <td id="toolUpgradeCost" class="upgradecost">1000</td>
                         <td><button onclick="upgrade(1)">Buy Upgrade</button></td>
                     </tr>
                     <tr>
                         <td>Farm Upgrade</td>
-                        <td id="farmUpgradeCost">2500</td>
+                        <td id="farmUpgradeCost" class="upgradecost">2500</td>
                         <td><button onclick="upgrade(2)">Buy Upgrade</button></td>
                     </tr>
                     <tr>
                         <td>Worker Upgrade</td>
-                        <td id="workerUpgradeCost">5000</td>
+                        <td id="workerUpgradeCost" class="upgradecost">5000</td>
                         <td><button onclick="upgrade(3)">Buy Upgrade</button></td>
                     </tr>
                     <tr>
                         <td>Machine Upgrade</td>
-                        <td id="machineUpgradeCost">10000</td>
+                        <td id="machineUpgradeCost" class="upgradecost">10000</td>
                         <td><button onclick="upgrade(4)">Buy Upgrade</button></td>
                     </tr>
                     <tr>
                         <td>Science Upgrade</td>
-                        <td id="scienceUpgradeCost">80000</td>
+                        <td id="scienceUpgradeCost" class="upgradecost">80000</td>
                         <td><button onclick="upgrade(5)">Buy Upgrade</button></td>
                     </tr>
                     <tr>
                         <td>Pure Evil Upgrade</td>
-                        <td id="evilUpgradeCost">10000000</td>
+                        <td id="evilUpgradeCost" class="upgradecost">10000000</td>
                         <td><button onclick="upgrade(6)">Buy Upgrade</button></td>
                     </tr>
                 </tbody>
@@ -73,44 +76,44 @@
         </thead>
         <tbody class="itemshop">
             <tr>
-                <td><img src="images/Shovel.png" alt="Tool" class="itemimages"><p id="toolcps"></p></td>
+                <td><img src="images/Shovel.png" alt="Tool" class="itemimages">Tool: <p id="toolcps"></p></td>
                 <td id="toolcost">Cost:25</td>
                 <td><button onclick="purchase(1)">Purchase</button></td>
             </tr>
             <tr>
-                <td><img src="images/Farm.png" alt="Tool" class="itemimages"><p id="farmcps"></p></td>
+                <td><img src="images/Farm.png" alt="Tool" class="itemimages">Farm: <p id="farmcps"></p></td>
                 <td id="farmcost">Cost:125</td>
                 <td><button onclick="purchase(2)">Purchase</button></td>
             </tr>
             <tr>
-                <td><img src="images/Worker.png" alt="Tool" class="itemimages"><p id="workercps"></p></td>
+                <td><img src="images/Worker.png" alt="Tool" class="itemimages">Worker: <p id="workercps"></p></td>
                 <td id="workercost">Cost:750</td>
                 <td><button onclick="purchase(3)">Purchase</button></td>
             </tr>
             <tr>
-                <td><img src="images/machine.png" alt="Tool" class="itemimages"><p id="machinecps"></p></td>
+                <td><img src="images/machine.png" alt="Tool" class="itemimages">Machine: <p id="machinecps"></p></td>
                 <td id="machinecost">Cost:5000</td>
                 <td><button onclick="purchase(4)">Purchase</button></td>
             </tr>
             <tr>
-                <td><img src="images/Science.png" alt="Tool" class="itemimages"><p id="sciencecps"></p></td>
+                <td><img src="images/Science.png" alt="Tool" class="itemimages">Science: <p id="sciencecps"></p></td>
                 <td id="sciencecost">Cost:50000</td>
                 <td><button onclick="purchase(5)">Purchase</button></td>
             </tr>
             <tr>
-                <td><img src="images/Evil.png" alt="Tool" class="itemimages"><p id="evilcps"></p></td>
+                <td><img src="images/Evil.png" alt="Tool" class="itemimages">Evil: <p id="evilcps"></p></td>
                 <td id="evilcost">Cost:1677215</td>
                 <td><button onclick="purchase(6)">Purchase</button></td>
             </tr>
         </tbody>
     </table>
 </div>
-        <div>
-            <p id="randomnotification"></p>
-        </div>
+
 
 
         <h1>Rebirth</h1>
+        <h3>Spend 1 Billion Cookies to Rebirth</h3>
+        <button onclick="rebirth()" id="rebirthcheck" class="rebirthcost">Not Enough Cookies</button>
         <script src="main.js">
         </script>    
     </body>
